// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SettingsChange.stories AddOwner 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 container mui-style-zpxm0u-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-1950vt0-MuiTypography-root"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-1hr8a3z-MuiSvgIcon-root"
          focusable="false"
        />
        Add owner
      </p>
      <div
        class="container"
      >
        <div
          class="avatarContainer"
          style="width: 32px; height: 32px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
            style="width: 32px; height: 32px;"
          />
        </div>
        <div
          class="MuiBox-root mui-style-1lchl8k"
        >
          <div
            class="ethHashInfo-name MuiBox-root mui-style-171onha"
            title="Nevinha"
          >
            <div
              class="MuiBox-root mui-style-1o4wo1x"
            >
              Nevinha
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiBox-root mui-style-b5p5gz"
            >
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <b>
                  rin
                  :
                </b>
                <span>
                  0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045
                </span>
              </span>
            </div>
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <button
                aria-label="Copy to clipboard"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
                  data-testid="copy-btn-icon"
                  focusable="false"
                />
              </button>
            </span>
            <div
              class="MuiBox-root mui-style-yjghm1"
            >
              <a
                aria-label="View on rinkeby.etherscan.io"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-1vbp2rr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="explorer-btn"
                href="https://rinkeby.etherscan.io/address/0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-tqxw8e-MuiSvgIcon-root"
                  focusable="false"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider mui-style-1facvfi-MuiDivider-root"
    />
    <div
      class="MuiBox-root mui-style-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 mui-style-17vdyq3-MuiTypography-root"
      >
        Any transaction requires the confirmation of:
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
      >
        <b>
          1
        </b>
         out of
         
        <b>
          1
           signer
        </b>
      </p>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider mui-style-1facvfi-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`./SettingsChange.stories SwapOwner 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1nt2i3f-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-qzqzle-MuiTypography-root"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-1hr8a3z-MuiSvgIcon-root"
          focusable="false"
        />
        Previous signer
      </p>
      <div
        class="container"
      >
        <div
          class="avatarContainer"
          style="width: 40px; height: 40px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse mui-style-143xw5x-MuiSkeleton-root"
            style="width: 40px; height: 40px;"
          />
        </div>
        <div
          class="MuiBox-root mui-style-1lchl8k"
        >
          <div
            class="ethHashInfo-name MuiBox-root mui-style-171onha"
            title="Bob"
          >
            <div
              class="MuiBox-root mui-style-1o4wo1x"
            >
              Bob
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiBox-root mui-style-b5p5gz"
            >
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <span>
                  0x00000000
                </span>
              </span>
            </div>
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <button
                aria-label="Copy to clipboard"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
                  data-testid="copy-btn-icon"
                  focusable="false"
                />
              </button>
            </span>
            <div
              class="MuiBox-root mui-style-yjghm1"
            >
              <a
                aria-label="View on rinkeby.etherscan.io"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-1vbp2rr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="explorer-btn"
                href="https://rinkeby.etherscan.io/address/0x00000000"
                rel="noreferrer"
                tabindex="0"
                target="_blank"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-tqxw8e-MuiSvgIcon-root"
                  focusable="false"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider mui-style-1facvfi-MuiDivider-root"
    />
  </div>
</div>
`;
